<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Actividad3">

    <ImageView
        android:id="@+id/img1"
        android:layout_width="wrap_content"
        android:layout_height="131dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logoisrael" />

    <TextView
        android:id="@+id/txtRecibeP1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtRecibeP2"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/etReciveP1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtRecibeP2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtRecibeP1"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/etReciveP2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtRecibeP3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtRecibeP3"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/etReciveP3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="18sp" />

</LinearLayout>