<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Actividad2">

    <ImageView
        android:id="@+id/img1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="27dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logoisrael"
        app:layout_constraintBottom_toTopOf="@+id/tvUsuarioRecivir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUsuarioRecivir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:layout_marginBottom="29dp"
        android:text="@string/tvUsuarioRecivir"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/etReciveUsuario"
        app:layout_constraintEnd_toEndOf="@+id/img1"
        app:layout_constraintTop_toBottomOf="@+id/img1" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etReciveUsuario">

        <TextView
            android:id="@+id/tvPregunta1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvPregunta2"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/r1"
            android:layout_width="177dp"
            android:layout_height="77dp"
            android:checkedButton="@id/rbOpcion1">

            <RadioButton
                android:id="@+id/rbOpcion1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbOpcion1" />

            <RadioButton
                android:id="@+id/rbOpcion2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbOpcion2" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="44dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/tvPregunta2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvPregunta1"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/cbOpcion1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cbOpcion1" />

        <CheckBox
            android:id="@+id/cbOpcion2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cbOpcion2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/tvPregunta3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvPregunta3"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtP3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <TextView
        android:id="@+id/etReciveUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginBottom="22dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/tvUsuarioRecivir"
        app:layout_constraintTop_toBottomOf="@+id/tvUsuarioRecivir" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="151dp"
        android:layout_marginLeft="151dp"
        android:layout_marginBottom="17dp"
        android:onClick="VerificarDatosP1"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

</androidx.constraintlayout.widget.ConstraintLayout>